--- a/eclipse.cbp
+++ b/eclipse.cbp
@@ -43,7 +43,7 @@
 			<Add directory="C:/Program Files (x86)/CodeBlocks/MinGW/lib" />
 		</Linker>
 		<Unit filename="main.cpp" />
-		<Unit filename="sphere.cpp">
+		<Unit filename="og.cpp">
 			<Option target="Release" />
 		</Unit>
 		<Extensions>
